[package]
name = "neck"
version = "0.1.0"
edition = "2021"
authors = ["YanagiEiichi <576398868@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YanagiEiichi/neck"
description = "A specialized HTTP proxy server used to traverse unidirectional network limitations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
native-tls = "0.2.11"
tokio = { version = "1.29.1", features = ["full"] }
tokio-native-tls = "0.3.1"

[features]
default = []
tls = []