[package]
name = "neck"
version = "0.1.3"
edition = "2021"
authors = ["YanagiEiichi <576398868@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YanagiEiichi/neck"
description = "A specialized HTTP proxy server used to traverse unidirectional network limitations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
native-tls = { version = "0.2.11", features = ["vendored"] }
rand = "0.8.5"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
socket2 = "0.5.3"
tokio = { version = "1.29.1", features = ["full"] }
tokio-native-tls = { version = "0.3.1" }
